feat: sezione demo

--- a/index.html
+++ b/index.html
@@ -5,11 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
+    <!-- Foglio di stile CSS -->
     <link rel="stylesheet" href="CSS/style.css">
+    <!-- /Foglio di stile CSS -->
+
 </head>
 
 <body>
+    <!-- Intestazione (Header) -->
+    <header>
+        <!-- Logo e Navigazione -->
+        <nav class="contenitore">
+            <span class="debug">logo</span>
+            <span class="debug link">link</span>
+            <span class="debug visibility">icona</span>
+        </nav>
+        <!-- /Logo e Navigazione -->
+    </header>
+    <!-- /Intestazione (Header) -->
 
+    <!-- Contenuto Principale -->
+    <main>
+        <!-- Sezione demo -->
+        <section id="demo" class="contenitore flex">
+            <div class="debug box grande"></div>
+            <div class="debug box"></div>
+            <div class="debug box"></div>
+            <div class="debug box"></div>
+            <div class="debug box"></div>
+        </section>
+        <!-- /Sezione demo -->
+
+    </main>
+    <!-- /Contenuto Principale -->
 </body>
 
 </html>
