--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
         </section>
         <!-- /Sezione demo -->
 
+        <!-- Sezione Planning -->
+        <section id="planning">
+            <div class="contenitore flex">
+                <div class="colonna">
+                    <div class="debug"> content</div>
+                    <div class="debug"> content</div>
+                </div>
+                <div class="colonna">
+                    <div class="debug"> content</div>
+
+                </div>
+            </div>
+        </section>
+        <!-- /Sezione Planning -->
     </main>
     <!-- /Contenuto Principale -->
 </body>
