feat: sezione testimonials

--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
             </div>
         </section>
         <!-- /Sezione Planning -->
+
+        <!-- Sezione Testimonials -->
+        <section id="testimonials">
+            <div class="contenitore">
+                <p class="debug"></p>
+                <div class="row flex">
+                    <div class="debug col-left"></div>
+                    <div class="debug col-right"></div>
+                </div>
+                <div class="row flex">
+                    <div class="debug col-left"></div>
+                    <div class="debug col-right"></div>
+                </div>
+                <div class="row flex">
+                    <div class="debug col-left"></div>
+                    <div class="debug col-right"></div>
+                </div>
+            </div>
+        </section>
+        <!-- /Sezione Testimonials -->
     </main>
     <!-- /Contenuto Principale -->
 </body>
