feat: Sezione Features

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Intestazione (Header) -->
     <header>
         <!-- Logo e Navigazione -->
-        <nav class="contenitore">
+        <nav class="contenitore flex">
             <span class="debug">logo</span>
             <span class="debug link">link</span>
             <span class="debug visibility">icona</span>
@@ -70,6 +70,20 @@
             </div>
         </section>
         <!-- /Sezione Testimonials -->
+
+        <!-- Sezione Features -->
+        <section id="features">
+            <div class="contenitore flex">
+                <div class="debug box"></div>
+                <div class="debug box"></div>
+                <div class="debug box"></div>
+                <div class="debug box"></div>
+                <div class="debug box"></div>
+                <div class="debug box"></div>
+            </div>
+        </section>
+        <!-- /Sezione Features -->
+
 
     </main>
     <!-- /Contenuto Principale -->
