feat: Sezione About Us

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                 </div>
                 <div class="colonna">
                     <div class="debug"> content</div>
-
                 </div>
             </div>
         </section>
@@ -84,6 +83,19 @@
         </section>
         <!-- /Sezione Features -->
 
+        <!-- Sezione About Us -->
+        <section id="about-us">
+            <div class="contenitore flex">
+                <div class="colonna sinistra">
+                    <div class="debug"> content</div>
+                    <div class="debug"> content</div>
+                </div>
+                <div class="colonna destra">
+                    <div class="debug"> content</div>
+                </div>
+            </div>
+        </section>
+        <!-- /Sezione About Us -->
 
     </main>
     <!-- /Contenuto Principale -->
