--- a/index.html
+++ b/index.html
@@ -97,8 +97,21 @@
         </section>
         <!-- /Sezione About Us -->
 
+        <!-- Sezione Get Started -->
+        <section id="get-started">
+            <div class="contenitore debug">Contenuto</div>
+        </section>
+        <!-- /Sezione Get Started -->
+
     </main>
     <!-- /Contenuto Principale -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="contenitore debug">Contenuto</div>
+    </footer>
+    <!-- /Footer -->
+
 </body>
 
 </html>
