--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <!-- Foglio di stile CSS -->
     <link rel="stylesheet" href="CSS/style.css">
     <!-- /Foglio di stile CSS -->
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <!-- /FontAwesome -->
+
+
 
 </head>
 
@@ -16,9 +21,31 @@
     <header>
         <!-- Logo e Navigazione -->
         <nav class="contenitore flex">
-            <span class="debug">logo</span>
-            <span class="debug link">link</span>
-            <span class="debug visibility">icona</span>
+            <img id="logo" src="img/logo.png" alt="Logo">
+            <ul class="link">
+                <li>
+                    <a href="http://google.com" target="_blank" rel="noopener noreferrer">Planning</a>
+                </li>
+                <li>
+                    <a href="http://google.com" target="_blank" rel="noopener noreferrer">Testimonials</a>
+                </li>
+                <li>
+                    <a href="http://google.com" target="_blank" rel="noopener noreferrer">Features</a>
+                </li>
+                <li>
+                    <a href="http://google.com" target="_blank" rel="noopener noreferrer">About Us</a>
+                </li>
+                <li>
+                    <button>
+                        <a href="http://google.com" target="_blank" rel="noopener noreferrer">Get Started</a>
+                    </button>
+                </li>
+            </ul>
+            <button class="visibility">
+                <a href="http://google.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
+            </button>
         </nav>
         <!-- /Logo e Navigazione -->
     </header>
