--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
     <main>
         <!-- Sezione demo -->
         <section id="demo" class="contenitore flex">
-            <div class="debug box grande"></div>
+            <div class="debug box grande flex">
+                <div class="colonna">
+                    <h5>Get a demo application</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi optio eveniet facilis. Tempora,
+                        magnam amet! Vel reiciendis tempora accusantium illo, voluptate optio! Exercitationem, beatae
+                        enim illo porro magnam fugiat error!
+                    </p>
+                    <button>
+                        <i class="fa-brands fa-apple"></i> App Store
+                    </button>
+                </div>
+                <div class="colonna" id="phone">
+                    <img src="img/phone.png" alt="Application">
+                </div>
+            </div>
             <div class="debug box"></div>
             <div class="debug box"></div>
             <div class="debug box"></div>
