feat: box grande

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <!-- /Google Fonts -->
+
+
     <!-- Foglio di stile CSS -->
     <link rel="stylesheet" href="CSS/style.css">
     <!-- /Foglio di stile CSS -->
@@ -58,9 +66,9 @@
             <div class="debug box grande flex">
                 <div class="colonna">
                     <h5>Get a demo application</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi optio eveniet facilis. Tempora,
-                        magnam amet! Vel reiciendis tempora accusantium illo, voluptate optio! Exercitationem, beatae
-                        enim illo porro magnam fugiat error!
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore
+                        quod, facere totam quas
+                        recusandae blanditiis.
                     </p>
                     <button>
                         <i class="fa-brands fa-apple"></i> App Store
