fix: box grande

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                         recusandae blanditiis.
                     </p>
                     <button>
-                        <i class="fa-brands fa-apple"></i> App Store
+                        <a href="http://google.com" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-apple"></i> App Store
+                        </a>
                     </button>
                 </div>
                 <div class="colonna" id="phone">
