feat: first section

--- a/index.html
+++ b/index.html
@@ -80,10 +80,38 @@
                     <img src="img/phone.png" alt="Application">
                 </div>
             </div>
-            <div class="debug box"></div>
-            <div class="debug box"></div>
-            <div class="debug box"></div>
-            <div class="debug box"></div>
+            <div class="debug box">
+                <i class="fa-solid fa-file-code icon"></i>
+                <h5>Clean Code</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore
+                    quod, facere totam quas
+                    recusandae blanditiis.
+                </p>
+            </div>
+            <div class="debug box">
+                <i class="fa-solid fa-compass-drafting icon"></i>
+                <h5>Web Design</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore
+                    quod, facere totam quas
+                    recusandae blanditiis.
+                </p>
+            </div>
+            <div class="debug box">
+                <i class="fa-solid fa-laptop-code icon"></i>
+                <h5>Developement</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore
+                    quod, facere totam quas
+                    recusandae blanditiis.
+                </p>
+            </div>
+            <div class="debug box">
+                <i class="fa-solid fa-bullhorn icon"></i>
+                <h5>Branding</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore
+                    quod, facere totam quas
+                    recusandae blanditiis.
+                </p>
+            </div>
         </section>
         <!-- /Sezione demo -->
 
