feat: section planning

--- a/index.html
+++ b/index.html
@@ -118,12 +118,25 @@
         <!-- Sezione Planning -->
         <section id="planning">
             <div class="contenitore flex">
-                <div class="colonna">
-                    <div class="debug"> content</div>
-                    <div class="debug"> content</div>
+                <div class="colonna" id="planning1">
+                    <img src="img/planning1.png" alt="planning1">
+                    <h4>Strategic Planning</h4>
+                    <p>
+                        Egestas dui id omare arcu odio. In tellus integer feugiat scelerisque varius morbi enim nunc.
+                        Habitasse platea dictumst quisque sagittis. Interdum velit euismod in pellentesque massa
+                        placerat duis. Quis viverra nibh cras pulvinar mattis.
+                    </p>
                 </div>
-                <div class="colonna">
-                    <div class="debug"> content</div>
+                <div class="colonna" id="planning2">
+                    <img src="img/planning2.png" alt="planning2">
+                    <h5>App Developement</h5>
+                    <p>
+                        Develop an on-demand app for your delivery business to reach your targeted customers without any
+                        interruption.
+                    </p>
+                    <button>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </button>
                 </div>
             </div>
         </section>
