--- a/index.html
+++ b/index.html
@@ -145,18 +145,52 @@
         <!-- Sezione Testimonials -->
         <section id="testimonials">
             <div class="contenitore">
-                <p class="debug"></p>
+                <h6>TESTIMONIALS</h6>
+                <h3>We are committed experts partners</h3>
+                <p class="debug">We place huge value on strong relationships and have seen the benefit they bring to our
+                    business. Customer feedback is vital in helping us to get it right
+                </p>
                 <div class="row flex">
-                    <div class="debug col-left"></div>
-                    <div class="debug col-right"></div>
+                    <div class="debug col-left">
+                        <img src="img/testimonial1.jpg" alt="testimonial1">
+                    </div>
+                    <div class="debug col-right">
+                        <p>
+                            <i class="fa-solid fa-quote-left"></i>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                            fermentum. Praesent semper feugiat nibh pulvinar proin.
+                            <i class="fa-solid fa-quote-right"></i>
+                        </p>
+                        <h5>NAT REYNOLDS</h5>
+                    </div>
                 </div>
                 <div class="row flex">
-                    <div class="debug col-left"></div>
-                    <div class="debug col-right"></div>
+                    <div class="debug col-left">
+                        <img src="img/testimonial2.jpg" alt="testimonial2">
+                    </div>
+                    <div class="debug col-right">
+                        <p>
+                            <i class="fa-solid fa-quote-left"></i>
+                            Pharetra vel turpis nunc eget lorem. Quisque id diam vel quam elementum pulvinar etiam. Urna
+                            porttitor rhoncus dolor purus non enim praesent elementum.
+                            <i class="fa-solid fa-quote-right"></i>
+                        </p>
+                        <h5>CELIA ALMEDA</h5>
+                    </div>
                 </div>
                 <div class="row flex">
-                    <div class="debug col-left"></div>
-                    <div class="debug col-right"></div>
+                    <div class="debug col-left">
+                        <img src="img/testimonial3.jpg" alt="testimonial3">
+                    </div>
+                    <div class="debug col-right">
+                        <p>
+                            <i class="fa-solid fa-quote-left"></i>
+                            Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin.
+                            Nibh nisl condimentum id venenatis a condimentum.
+                            <i class="fa-solid fa-quote-right"></i>
+                        </p>
+                        <h5>BOB ROBERTS</h5>
+                    </div>
                 </div>
             </div>
         </section>
