feat: Sezione Features

--- a/index.html
+++ b/index.html
@@ -198,13 +198,62 @@
 
         <!-- Sezione Features -->
         <section id="features">
+            <h3>Benefits on working with us</h3>
             <div class="contenitore flex">
-                <div class="debug box"></div>
-                <div class="debug box"></div>
-                <div class="debug box"></div>
-                <div class="debug box"></div>
-                <div class="debug box"></div>
-                <div class="debug box"></div>
+                <div class="debug box">
+                    <h2>01</h2>
+                    <h5>Hight Quality</h5>
+                    <p>
+                        Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                        fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button><a href="http://google.com" target="_blank" rel="noopener noreferrer">more</a></button>
+                </div>
+                <div class="debug box">
+                    <h2>02</h2>
+                    <h5>Creative Team</h5>
+                    <p>
+                        Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                        fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button><a href="http://google.com" target="_blank" rel="noopener noreferrer">more</a></button>
+                </div>
+                <div class="debug box">
+                    <h2>03</h2>
+                    <h5>Amazing Results</h5>
+                    <p>
+                        Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                        fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button><a href="http://google.com" target="_blank" rel="noopener noreferrer">more</a></button>
+                </div>
+                <div class="debug box">
+                    <h2>04</h2>
+                    <h5>Best Pricing</h5>
+                    <p>
+                        Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                        fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button><a href="http://google.com" target="_blank" rel="noopener noreferrer">more</a></button>
+                </div>
+                <div class="debug box">
+                    <h2>05</h2>
+                    <h5>Innovations</h5>
+                    <p>
+                        Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                        fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button><a href="http://google.com" target="_blank" rel="noopener noreferrer">more</a></button>
+                </div>
+                <div class="debug box">
+                    <h2>06</h2>
+                    <h5>24/7 Support</h5>
+                    <p>
+                        Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                        fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button><a href="http://google.com" target="_blank" rel="noopener noreferrer">more</a></button>
+                </div>
             </div>
         </section>
         <!-- /Sezione Features -->
