--- a/index.html
+++ b/index.html
@@ -262,11 +262,35 @@
         <section id="about-us">
             <div class="contenitore flex">
                 <div class="colonna sinistra">
-                    <div class="debug"> content</div>
-                    <div class="debug"> content</div>
+                    <h2>About Us</h2>
+                    <p>
+                        Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec
+                        pretium vulputate.
+                        Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem.
+                        Egestas tellus rutrum
+                        tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque
+                        mauris pellentesque
+                        pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat
+                        duis.
+                    </p>
+                    <p>
+                        Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis
+                        bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras
+                        fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit
+                        massa enim. the text
+                        box. Click again or double click to start
+                        editing the text
+                    </p>
                 </div>
                 <div class="colonna destra">
-                    <div class="debug"> content</div>
+                    <div class="debug col-left">
+                        <img src="img/about.jpg" alt="Cosimo">
+                        <i class="fa-solid fa-quote-left"></i>
+                    </div>
+                    <h5>
+                        I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.
+                    </h5>
+                    <button><i class="fa-brands fa-linkedin"></i> Find me on linkedin</button>
                 </div>
             </div>
         </section>
