feat: Sezione Get Started

--- a/index.html
+++ b/index.html
@@ -298,7 +298,18 @@
 
         <!-- Sezione Get Started -->
         <section id="get-started">
-            <div class="contenitore debug">Contenuto</div>
+            <div class="contenitore debug">
+                <h6>GET STARTED</h6>
+                <h3>Simple, Transparent Pricing</h3>
+                <h2>It's Free!</h2>
+                <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other
+                    plans with more control.
+                </p>
+                <button>Get Started</button>
+                <div>Copyright 2023 Boolean &bull; Classe CX &bull; <a href="http://google.com" target="_blank"
+                        rel="noopener noreferrer">Privacy Policy</a>
+                </div>
+            </div>
         </section>
         <!-- /Sezione Get Started -->
 
