--- a/index.html
+++ b/index.html
@@ -318,7 +318,17 @@
 
     <!-- Footer -->
     <footer>
-        <div class="contenitore debug">Contenuto</div>
+        <div class="contenitore debug">
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Commodi maiores minima vitae vero nulla pariatur impedit!
+            </p>
+            <div>
+                <a href="http://google.com" target="_blank" rel="noopener noreferrer">Lorem ipsum</a>
+                <span>scelerisque mauris pellentesque</span>
+                <a href="http://google.com" target="_blank" rel="noopener noreferrer">Boolean careers</a>
+            </div>
+        </div>
     </footer>
     <!-- /Footer -->
 
